2001-05-27  ERDI Gergo  <cactus@cactus.rulez.org>

	* gnome-about.c: First run at porting it over to
	Pango. It is no longer themed by special widget names in GTKRC,
	instead, you modify the default font for the canvas widget in
	your GTKRC and it will use that. Colors and layout sizes are
	hardcoded for now. Only the title, the copyright and the
	description is displayed (i.e. the authors list is missing).

2001-05-25  Martin Baulig  <baulig@suse.de>

	* gnome-vfs-util.c (load_done): Use gnome_vfs_async_cancel() instead of
	gnome_vfs_async_close() on error.

2001-05-25  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.c
	(gnome_selector_client_set_uri): New function.
	(gnome_selector_client_add_uri): New function.

2001-05-23  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.c (gnome_selector_client_construct): Create the
	property bag and use the factory.

2001-05-21  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.c (PROP_WANT_ENTRY_WIDGET, PROP_WANT_SELECTOR_WIDGET,
	PROP_WANT_BROWSE_DIALOG, PROP_WANT_BROWSE_BUTTON, PROP_WANT_CLEAR_BUTTON,
	PROP_WANT_DEFAULT_BUTTON): Use the new tristate enum.
	(gnome_selector_client_construct): Don't create the property bag but encode
	all the arguments in the moniker string.

	* gnome-selector-component.c: Use the new tristate enum.

	* gnome-image-entry.c, gnome-image-selector.c: Only set properties which
	are different from their default values.

	* gnome-selector-dialog-client.[ch]: New files.

2001-05-21  Martin Baulig  <baulig@suse.de>

	* gnome-image-selector.c, gnome-image-entry.c: Don't include anything
	from components/. Good to see you hacking here again, George :-)

Mon May 21 00:49:03 2001  George Lebl <jirka@5z.com>

	* gnome-ditem-edit.[ch]:  Make it a widget instead of an object, (this
	  is all new api anyway so we're allowed to break it if it's broken)
	  Also whack ALL the accessors for widgets inside as those are